src/test/ui/consts/const-match-check.eval1.stderr
error[E0005]: refutable pattern in local binding: `_` not covered
  --> $DIR/const-match-check.rs:35:15
   |
LL |     A = { let 0 = 0; 0 },
   |               ^ pattern `_` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
